--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!doctype html>
-<html lang="en" style="scroll-behavior: smooth;">
+<html lang="en" style="scroll-behavior: smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Altitude Group | Premium Recruitment & Executive Search</title>
-    <meta name="description" content="Altitude Group connects top-tier talent with leading global companies across Tech, Finance, PR, Advertising, Marketing & Creative sectors." />
+    <meta
+      name="description"
+      content="Altitude Group connects top-tier talent with leading global companies across Tech, Finance, PR, Advertising, Marketing & Creative sectors."
+    />
     <meta name="author" content="Altitude Group" />
 
-    <meta property="og:title" content="Altitude Group | Premium Recruitment & Executive Search" />
-    <meta property="og:description" content="Connecting high-performing professionals with leading global businesses. Executive search, C-suite hiring, and industry-specific recruitment." />
+    <meta
+      property="og:title"
+      content="Altitude Group | Premium Recruitment & Executive Search"
+    />
+    <meta
+      property="og:description"
+      content="Connecting high-performing professionals with leading global businesses. Executive search, C-suite hiring, and industry-specific recruitment."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AltitudeGroup" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
